--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
         <link rel="stylesheet" href="Styles.css">
     </head>
     <body>
-        <h1>This is a test</h1>
-        <p>Paragraph</p>
+        <h1>
+            List of stinky people
+        </h1>
+        <ul>
+            <li>Mit Patel</li>
+        </ul>
 
     </body>
 </html>
