--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>
-            List of stinky people
+            List of stinky people:
         </h1>
         <ul>
             <li>Mit Patel</li>
