--- a/about.html
+++ b/about.html
@@ -1,25 +1,20 @@
 <html>
     <head>
-        <title>Home</title>
+        <title>About</title>
         <link rel="stylesheet" href="Styles.css">
-        <link rel="stylesheet" href="topnavbl.css">
+        <link rel="stylesheet" href="topnavrd.css">
+
+
     </head>
+
     <body>
         <div class = "topnav">
             <a class = "active" href = "index.html">Home</a>
             <a class = "active" href = "test.html">Test</a>
             <a class = "active" href = "about.html">About</a>
         </div>
-        <span></span>
-        <div class = "main">
-            <h1>
-                List of stinky people:
-            </h1>
-            <ul>
-                <li>Mit Patel</li>
-                <li>More to be add soon...</li>
-            </ul>
-        </div>
+        <p>Test</p>
 
     </body>
+
 </html>
