--- a/about.html
+++ b/about.html
@@ -2,13 +2,11 @@
     <head>
         <title>About</title>
         <link rel="stylesheet" href="Styles.css">
-        <link rel="stylesheet" href="topnavrd.css">
-
 
     </head>
 
     <body>
-        <div class = "topnav">
+        <div class = "topnavrd">
             <a class = "active" href = "index.html">Home</a>
             <a class = "active" href = "test.html">Test</a>
             <a class = "active" href = "about.html">About</a>
