--- a/index.html
+++ b/index.html
@@ -2,13 +2,28 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" href="Styles.css">
-        <link rel="stylesheet" href="topnavbl.css">
     </head>
     <body>
-        <div class = "topnav">
-            <a class = "active" href = "index.html">Home</a>
-            <a class = "active" href = "test.html">Test</a>
-            <a class = "active" href = "about.html">About</a>
+        <div class = "topnavbl">
+            <a href = "index.html">Home</a>
+            <a href = "test.html">Test</a>
+            <a href = "about.html">About</a>
+            <div class = topnav-center>
+                <a href = "index.html">
+                    <img src = "Initials.png" class = "logo">
+                </a>
+            </div>
+            <div class = "topnav-right">
+                <a href = "https://www.twitter.com" target = "_blank">
+                    <img src = "Twitter.png" alt = "Twitter" class = "image">
+                </a>
+                <a href = "https://www.linkedin.com/in/NickRucinski" target = "_blank">
+                    <img src = "LinkedIn.png" alt = "LinkedIn" class = "image">
+                </a>
+                <a href = "https://www.instagram.com" target = "_blank">
+                    <img src = "Instagram.png" alt = "Instagram" class = "image">
+                </a>
+            </div>
         </div>
         <span></span>
         <div class = "main">
@@ -17,6 +32,7 @@
             </h1>
             <ul>
                 <li>Mit Patel</li>
+                <li>Jessica Nardone</li>
                 <li>More to be add soon...</li>
             </ul>
         </div>
