--- a/test.html
+++ b/test.html
@@ -2,12 +2,10 @@
     <head>
         <title>Test</title>
         <link rel="stylesheet" href="Styles.css">
-        <link rel="stylesheet" href="topnavgn.css">
-
     </head>
 
     <body>
-        <div class = "topnav">
+        <div class = "topnavgn">
             <a class = "active" href = "index.html">Home</a>
             <a class = "active" href = "test.html">Test</a>
             <a class = "active" href = "about.html">About</a>
