--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="Styles.css">
+        <link rel="stylesheet" href="mainPage.css">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
-        <div class = "topnavbl">
+        <div class = "topnav">
             <a href = "index.html">Home</a>
             <a href = "test.html">Test</a>
             <a href = "about.html">About</a>
@@ -14,13 +15,13 @@
                 </a>
             </div>
             <div class = "topnav-right">
-                <a href = "https://www.twitter.com" target = "_blank">
+                <a href = "https://twitter.com/nickrucinski1" target = "_blank">
                     <img src = "Twitter.png" alt = "Twitter" class = "image">
                 </a>
-                <a href = "https://www.linkedin.com/in/NickRucinski" target = "_blank">
+                <a href = "https://www.linkedin.com/in/nicholasrucinski" target = "_blank">
                     <img src = "LinkedIn.png" alt = "LinkedIn" class = "image">
                 </a>
-                <a href = "https://www.instagram.com" target = "_blank">
+                <a href = "https://www.instagram.com/nickrucinski_/" target = "_blank">
                     <img src = "Instagram.png" alt = "Instagram" class = "image">
                 </a>
             </div>
@@ -33,7 +34,7 @@
             <ul>
                 <li>Mit Patel</li>
                 <li>Jessica Nardone</li>
-                <li>More to be add soon...</li>
+                <li>More to be added soon...</li>
             </ul>
         </div>
 
