--- a/test.html
+++ b/test.html
@@ -1,16 +1,37 @@
 <html>
     <head>
         <title>Test</title>
-        <link rel="stylesheet" href="Styles.css">
+        <link rel="stylesheet" href="test.css">
     </head>
 
     <body>
-        <div class = "topnavgn">
-            <a class = "active" href = "index.html">Home</a>
-            <a class = "active" href = "test.html">Test</a>
-            <a class = "active" href = "about.html">About</a>
+        <div class = "topnav">
+            <a href = "index.html">Home</a>
+            <a href = "test.html">Test</a>
+            <a href = "about.html">About</a>
+            <div class = topnav-center>
+                <a href = "index.html">
+                    <img src = "Initials.png" class = "logo">
+                </a>
+            </div>
+            <div class = "topnav-right">
+                <a href = "https://twitter.com/nickrucinski1" target = "_blank">
+                    <img src = "Twitter.png" alt = "Twitter" class = "image">
+                </a>
+                <a href = "https://www.linkedin.com/in/nicholasrucinski" target = "_blank">
+                    <img src = "LinkedIn.png" alt = "LinkedIn" class = "image">
+                </a>
+                <a href = "https://www.instagram.com/nickrucinski_/" target = "_blank">
+                    <img src = "Instagram.png" alt = "Instagram" class = "image">
+                </a>
+            </div>
         </div>
-        <p>Test</p>
+        <span></span>
+        <div class = "main">
+            <h1>
+                Test
+            </h1>
+        </div>
 
     </body>
 
