--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <ul>
                 <li>Mit Patel</li>
                 <li>Jessica Nardone</li>
+                <li>Shahriyar "Shay" Shawon</li>
                 <li>More to be added soon...</li>
             </ul>
         </div>
