--- a/test.html
+++ b/test.html
@@ -26,13 +26,7 @@
                 </a>
             </div>
         </div>
-        <span></span>
-        <div class = "main">
-            <h1>
-                Test
-            </h1>
-        </div>
-
+        <iframe src="http://localhost:54936/" height="720" width="1280" title="game"></iframe>
     </body>
 
 </html>
